package models;

public class CityMap {
}
