package models;

public class DeliveryGraph {
    // TODO
    public Route getRoute(int startId, int endId) {
        return null;
    }
}
