@startuml

package "model" {
    class Point {
        +x
        +y
    }

    class CityMap {
    }

    class Intersection {
    }

    class StreetPart {
        +speed
        +distance
    }

    class DeliveryGraph {
    }

    class DeliveryAddress {
        +unloadDuration
    }

    class InterAddressPath {
    }

    class DeliveryRoute {
    }

    CityMap "0..*" *--> Intersection: intersections
    Intersection --> Point: coordinates
    StreetPart --> Intersection: source
    StreetPart --> Intersection: target
    StreetPart <--o "1..*" Intersection: outStreets

    ' DeliveryGraph to CityMap
    DeliveryGraph --> CityMap: city
    DeliveryAddress --> Intersection: location
    InterAddressPath --> StreetPart: streetParts
    ' Edges and vertices
    DeliveryGraph "0..*" o--> DeliveryAddress: deliveryAddresses
    InterAddressPath --> DeliveryAddress: source
    InterAddressPath --> DeliveryAddress: target
    InterAddressPath <--o "1..*" DeliveryAddress: outPaths

    DeliveryRoute o--> InterAddressPath: paths
}

@enduml
